# Solving_the_Wave_Equation_Using_MPI

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Tests/: Mpi_CourseWork_test.cpp  TestMpi.cpp  mpi_test.e5192958  mpi_test.o5192958  mpi_test_2.o5196770  mpi_test_2.o5196831  my_script.pbs  test
data/: basic-32-150.npy  basic-32-250.npy  basic-32-350.npy  basic-32-450.npy  basic-32-50.npy  basic-32-550.npy  basic-32-650.npy
hpc-work/: 2-mpi_100_32.o5197534  2-mpi_200_32.o5197535  2-mpi_300_32.o5197540  2-mpi_400_32.o5197542  2-mpi_500_32.o5197543  2-run-100-32.pbs  2-run-200-32.pbs  2-run-300-32.pbs  2-run-400-32.pbs  2-run-500-32.pbs  l_run-100-32.pbs  l_run-200-32.pbs  l_run-300-32.pbs  l_run-400-32.pbs  l_run-500-32.pbs  mpi_100_1.o5197435  mpi_100_16.o5197441  mpi_100_2.o5197436  mpi_100_32.o5197442  mpi_100_4.o5197438  mpi_100_6.o5197439  mpi_100_8.o5197440  mpi_200_1.o5197443  mpi_200_16.o5197448  mpi_200_2.o5197444  mpi_200_32.o5197450  mpi_200_4.o5197445  mpi_200_6.o5197446  mpi_200_8.o5197447  mpi_300_1.o5197451  mpi_300_16.o5197456  mpi_300_2.o5197452  mpi_300_32.o5197457  mpi_300_4.o5197453  mpi_300_6.o5197454  mpi_300_8.o5197455  mpi_400_1.o5197458  mpi_400_16.o5197464  mpi_400_2.o5197459  mpi_400_32.o5197465  (+47 more)
hpc-work/copy/: mpi_100_1.o5197173  mpi_100_16.e5197179  mpi_100_16.o5197179  mpi_100_2.o5197174  mpi_100_32.e5197180  mpi_100_32.o5197180  mpi_100_4.e5197176  mpi_100_4.o5197176  mpi_100_6.e5197177  (+43 more)
scripts/: Output.txt  plot.ipynb  run.py
src/: Mpi_CourseWork.cpp  Mpi_CourseWork.h  Serial_Wave_Equation.cpp  Serial_Wave_Equation.h
